# online-judge

./: .gitignore  CMakeLists.txt  README.md
include/: httplib.h  runner.h
nginx/: nginx.conf
online-judge-backend/: .clang-format  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
online-judge-backend-backup/: CMakeLists.txt
online-judge-backend-backup/sql/: init-problem.mongodb  init-statusrecord.mongodb  init.mongodb
online-judge-backend-backup/src/: AnnouncementList.h  CommentList.cpp  Control.cpp  Control.h  DiscussList.h  HttpServer.h  MongoDataBase.h  ProblemList.cpp  ProblemList.h  RedisDataBase.cpp  RedisDataBase.h  SolutionList.cpp  StatusRecordList.h  Tag.cpp  UserList.cpp  main.cpp
online-judge-backend/.conan/profiles/: ci_release  dev_debug
online-judge-backend/format/: check_format.sh  format.sh
online-judge-backend/include/constants/: app.h  constants.h  db.h  error_code.h  judge.h  problem.h  server.h  user.h
online-judge-backend/include/core/: control.h
online-judge-backend/include/db/: mongo_database.h  redis_database.h
online-judge-backend/include/http/: http_server.h
online-judge-backend/include/judger/: judger.h  runner.h
online-judge-backend/include/services/: announcement_service.h  comment_service.h  discuss_service.h  problem_service.h  solution_service.h  status_record_service.h  tag_service.h  user_service.h
online-judge-backend/include/utils/: id_generator.hpp  json_utils.h  param_validator.h  response.h  snowflake.hpp
online-judge-backend/problemdata/1/: spj
online-judge-backend/problemdata/2/: 3.in  spj  spj.cpp
online-judge-backend/problemdata/4/: 1.in  4.in  4.out  5.in  5.out  6.in  6.out  spj  spj.cpp
online-judge-backend/sql/: init-announcement.mongodb  init-problem.mongodb  init-user.mongodb
online-judge-backend/src/: AnnouncementList.cpp  AnnouncementList.h  CommentList.cpp  CommentList.h  Control.cpp  Control.h  DiscussList.cpp  DiscussList.h  HttpServer.cpp  Judger.cpp  Judger.h  MongoDataBase.cpp  MongoDataBase.h  ProblemList.cpp  ProblemList.h  RedisDataBase.cpp  RedisDataBase.h  SolutionList.cpp  SolutionList.h  StatusRecordList.cpp  StatusRecordList.h  Tag.cpp  Tag.h  UserList.cpp  UserList.h  main.cpp
online-judge-backend/src/core/: control.cpp
online-judge-backend/src/db/: mongo_database.cpp  redis_database.cpp
online-judge-backend/src/http/: http_server.cpp
online-judge-backend/src/judger/: judger.cpp
online-judge-backend/src/services/: announcement_service.cpp  comment_service.cpp  discuss_service.cpp  problem_service.cpp  solution_service.cpp  status_record_service.cpp  tag_service.cpp  user_service.cpp
online-judge-backend/src/utils/: json_utils.cpp  param_validator.cpp
online-judge-docs/: README.md  package.json  pnpm-lock.yaml
online-judge-docs/docs/.vitepress/: config.mts
online-judge-docs/docs/src/: index.md
online-judge-frontend/: .editorconfig  .env  .env.development  .env.production  .eslintrc-auto-import.json  .gitignore  .prettierignore  .prettierrc.json  README.md  env.d.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  stylelint.config.mjs  tsconfig.app.json  vite.config.ts
online-judge-frontend-backup/: index.html  package.json  vite.config.js
online-judge-frontend-backup/src/: App.vue
online-judge-frontend-backup/src/assets/: base.css
online-judge-frontend-backup/src/components/: Comment.vue
online-judge-frontend-backup/src/pages/: Admin.vue  Announcement.vue  Discuss.vue  Problem.vue  Solution.vue  UserHome.vue
online-judge-frontend-backup/src/router/: index.js
online-judge-frontend/docs/: AXIOS_USAGE.md
online-judge-frontend/src/: App.vue  main.js  main.ts
online-judge-frontend/src/api/: announcement.ts  comment.ts  discussion.ts  index.ts  judge.ts  problem.ts  solution.ts  status.ts  tag.ts  user.ts
online-judge-frontend/src/assets/: base.css  main.css
online-judge-frontend/src/axios/: index.js
online-judge-frontend/src/components/: HelloWorld.vue  MarkDownEditor.vue  RankingBoard.vue  TheWelcome.vue  WelcomeItem.vue
online-judge-sql/: MongoDBCollectionStructure.json  init-announcement.mongodb  init-database.mongodb  init-problem.mongodb  init-status-record.mongodb  init-user.mongodb  init.mongodb  online_judge.js
problemdata/1/: spj.cpp
problemdata/2/: spj.cpp
sql/: init-problem.mongodb  init-statusrecord.mongodb  init-user.mongodb
src/: AnnouncementList.cpp  AnnouncementList.h  CommentList.cpp  CommentList.h  Control.cpp  Control.h  DiscussList.cpp  DiscussList.h  HttpServer.cpp  HttpServer.h  Judger.cpp  Judger.h  MongoDataBase.cpp  MongoDataBase.h  ProblemList.cpp  ProblemList.h  RedisDataBase.cpp  RedisDataBase.h  SolutionList.cpp  SolutionList.h  StatusRecordList.cpp  StatusRecordList.h  Tag.cpp  Tag.h  UserList.cpp  UserList.h  main.cpp
src/utils/: snowflake.hpp
(+182 files in other folders)
